Changed deprecated usages of the Double class.